# crap

./: CMakeLists.txt  main.cpp
GLDEMO/: BasicFShader.frag  PassThroughVShader.vert
bullet-demo/: BulletHelloWorld.cpp  BulletHolaMundo.cpp  CMakeLists.txt
cubemap-demo/shaders/: SkyBox.vsh
doc/: informe.tex  informe2.tex
solar/: solar_system_main.cpp
tp1/: CMakeLists.txt
tp2/: grilla.raw  main.cpp
tp2/cubemaps/: CMakeLists.txt
tp2/include/: Cilindro.h  ComandoCambiarForma.h  ComandoCambiarShader.h  ComandoCambiarTextura.h  ComandoCambiarTexturaCubica.h  Cono.h  Cubo.h  Cuerpo.h  Esfera.h  ManejadorTecla.h  Menu.h  Mundo.h  MundoTP2.h  Programa.h  Shader.h  Toroide.h
tp2/lib/: CMakeLists.txt  Cilindro.cpp  ComandoCambiarColor.cpp  ComandoCambiarForma.cpp  ComandoCambiarShader.cpp  ComandoCambiarTextura.cpp  ComandoCambiarTexturaCubica.cpp  Cono.cpp  Cubo.cpp  Cuerpo.cpp  Esfera.cpp  Menu.cpp  Mundo.cpp  MundoTP2.cpp  Programa.cpp  Shader.cpp  Toroide.cpp
tp2/salvavidas/: Toroide.cpp  escalar.vert
tp2/shaders/: CMakeLists.txt  achatado.vert  escalar.vert  esferizar.vert  ondas.vert  reflejar.frag  rotar.vert  simple.frag  simple.vert  simple_ilum.vert  textura.frag  textura.vert  torcido.vert
tp2/utils/: img2raw
tp3/: Metal.raw  chapaDoble.raw  ladd.raw  main.cpp  pared.raw  t.raw
tp3/include/: Body.h  ComandoCambiarTextura.h  Curve.h  GLMaterial.h  GLShader.h  GLTexture.h  GLWindow.h  GLWorld.h  GlobalParameters.h  Primitive.h  TP3.h  Vertex.h
tp3/lib/: Body.cpp  CMakeLists.txt  ComandoCambiarTextura.cpp  Curve.cpp  GLShader.cpp  GLTexture.cpp  GLWindow.cpp  GLWorld.cpp  GlVertex.cpp  Primitive.cpp  TP3.cpp  Vertex.cpp
tp3/lib/Bodies/: Bottle.cpp  ConveyorBelt.cpp  CoveyorBelt2.cpp  FillMachine.cpp  FirstMachine.cpp  LabelMachine.cpp  LastMachine.cpp  Pack.cpp  Prism.cpp
tp3/lib/Curves/: Bezier.cpp  StraightLine.cpp
tp3/lib/Primitives/: Cube.cpp  Cylinder.cpp  Sphere.cpp  SuperficieBarrido.cpp  SuperficieRevolucion.cpp
tp3/shaders/: base.frag  belt.frag  bottle.frag  cubic.frag  cubic.vert  light.frag  (+4 more)
trunk/: CMakeLists.txt  main.cpp
trunk/GLDEMO/: CMakeLists.txt  main.cpp
trunk/GLDEMO/include/: myWindow.h
trunk/GLDEMO/src/: myWindow.cpp
trunk/bullet-demo/: BulletHolaMundo.cpp
trunk/cubemap-demo/: makefile
trunk/cubemap-demo/shaders/: Reflection.vsh  SkyBox.fsh
trunk/cubemap-demo/src/: GLSLReflection.cpp
trunk/doc/: Caratula.tex  Caratula2.tex  Caratula3.tex  informe.tex  informe2.tex  informe3.tex
trunk/solar/: CMakeLists.txt  sunmap.raw
trunk/tp1/: main.cpp
trunk/tp2/: CMakeLists.txt  ladrillo.raw  main.cpp
trunk/tp2/cubemaps/cubemap_landscape/: landscape_negative_x.png.raw  landscape_negative_y.png.raw  landscape_negative_z.png.raw  landscape_positive_y.png.raw  landscape_positive_z.png.raw
trunk/tp2/cubemaps/cubemap_libro/: CMakeLists.txt
trunk/tp2/include/: Animable.h  Cilindro.h  ComandoCambiarColor.h  ComandoCambiarForma.h  ComandoCambiarShader.h  ComandoCambiarTextura.h  ComandoCompuesto.h  Command.h  Cubo.h  Cuerpo.h  Esfera.h  ManejadorTecla.h  Menu.h  Mundo.h  MundoTP2.h  Programa.h  Shader.h  Toroide.h
trunk/tp2/lib/: CMakeLists.txt  Cilindro.cpp  ComandoCambiarColor.cpp  ComandoCambiarForma.cpp  ComandoCambiarShader.cpp  ComandoCambiarTextura.cpp  ComandoCambiarTexturaCubica.cpp  ComandoCompuesto.cpp  Cono.cpp  Cubo.cpp  Cuerpo.cpp  Esfera.cpp  Menu.cpp  Mundo.cpp  MundoTP2.cpp  Programa.cpp  Shader.cpp  Toroide.cpp
trunk/tp2/salvavidas/: simple.frag
trunk/tp2/shaders/: CMakeLists.txt  achatado.vert  esferizar.vert  ondas.vert  reflejar.frag  reflejar.vert  rotar.vert  semimate.frag  simple.frag  simple.vert  simple_ilum.vert  textura.frag  textura.vert  torcido.vert  wtf.vert
trunk/tp3/: 16metal.raw  CMakeLists.txt  chapa.raw  cinta.raw  cintita.raw  eti.raw  etiquetaCoca.raw  lad.raw  laddd.raw  main.cpp
trunk/tp3/include/: Body.h  Curve.h  GLShader.h  GLTexture.h  GlVertex.h  GlobalParameters.h  Primitive.h  TP3.h  Vertex.h
trunk/tp3/include/Bodies/: Bottle.h  CoveyorBelt2.h  FillMachine.h  LabelMachine.h  LastMachine.h  Machine.h  Pack.h
trunk/tp3/include/Curves/: BSpline.h  StraightLine.h
trunk/tp3/include/Primitives/: Cube.h  Cylinder.h  Sphere.h  SuperficieBarrido.h  SuperficieRevolucion.h
trunk/tp3/lib/: Body.cpp  CMakeLists.txt  Curve.cpp  GLMaterial.cpp  GLShader.cpp  GLTexture.cpp  TP3.cpp
trunk/tp3/lib/Bodies/: Bottle.cpp  ConveyorBelt.cpp  CoveyorBelt2.cpp  FillMachine.cpp  FirstMachine.cpp  LabelMachine.cpp  LastMachine.cpp  Machine.cpp  Pack.cpp  Prism.cpp
trunk/tp3/lib/Curves/: BSpline.cpp  StraightLine.cpp
trunk/tp3/lib/Primitives/: Cube.cpp  Cylinder.cpp  Sphere.cpp  SuperficieBarrido.cpp  SuperficieRevolucion.cpp  Torus.cpp
trunk/tp3/shaders/: base.frag  belt.frag  bottle.frag  cubic.vert  light.frag  light.vert  noTexture.frag  normal.frag  normal.vert
(+19 files in other folders)
