add_library(framework_final_lib 
  GLWindow.cpp
  GLWorld.cpp
  Body.cpp
  Vertex.cpp
  GlVertex.cpp
  GLTexture.cpp
  GLShader.cpp
  Curve.cpp
  Curves/StraightLine.cpp
  Primitive.cpp
  Primitives/Cube.cpp
  Primitives/Cylinder.cpp
  Bodies/Prism.cpp
  Bodies/Bottle.cpp
  Bodies/ConveyorBelt.cpp
  Bodies/CoveyorBelt2.cpp
  Primitives/SuperficieRevolucion.cpp
  Primitives/SuperficieBarrido.cpp
)
