add_library(framework_final_lib 
  GLWindow.cpp
  GLWorld.cpp
  Body.cpp
  GLTexture.cpp
  GLShader.cpp
  GLMaterial.cpp
  Curve.cpp
  Curves/StraightLine.cpp
  Curves/BSpline.cpp
  Curves/Bezier.cpp
  Primitive.cpp
  Primitives/Cube.cpp
  Primitives/Cylinder.cpp
  Primitives/Sphere.cpp
  Bodies/Prism.cpp
  Bodies/Bottle.cpp
  Bodies/ConveyorBelt.cpp
  Bodies/CoveyorBelt2.cpp
  Bodies/Machine.cpp
  Bodies/FirstMachine.cpp
  Bodies/LastMachine.cpp
  Bodies/LabelMachine.cpp
  Bodies/FillMachine.cpp
  Bodies/Pack.cpp
  Primitives/SuperficieRevolucion.cpp
  Primitives/SuperficieBarrido.cpp
)
